--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.1",
     "next": "15.5.2",
+    "nodemailer": "^7.0.10",
     "prettier": "^3.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.34.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
